Fix no botão de sintomas

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
         <h2>Salve a sua família</h2>
         <h2>Salve o mundo</h2>
         <p>Coronavírus(Covid-19) é uma doença altamente infecciosa causada por um novo vírus.</p>
-        <button>Cheque os Sintomas</button>
+        <a href="https://www.minhavida.com.br/saude/materias/36071-sintomas-de-coronavirus-veja-quais-sao-os-primeiros-sinais"
+          target="_blank">
+          Cheque os Sintomas
+        </a>
       </article>
       <img src="images/corona-news.svg" alt="Coronavirus">
     </section>
