Adicionado favicon e responsividade ao projeto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="shortcut icon" href="images/favicon.ico" />
   <title>Covid News | Se informe com a verdade</title>
 </head>
 
@@ -64,9 +65,7 @@
     <section class="news-covid">
       <article class="news-item">
         <h3>Coronavírus: o que sabemos sobre tratamentos e vacinas para covid-19</h3>
-        <img
-          src="https://conteudo.imguol.com.br/c/entretenimento/51/2020/03/28/coronavirus-remedios-1585422598675_v2_900x506.jpg"
-          alt="Tratamentos Coronavirus">
+
         <p>Desde que os primeiros casos de covid-19 —a doença causada pelo novo coronavírus - foram registrados no final
           de fevereiro deste ano e começaram a aumentar rapidamente em março, as pessoas têm se perguntando sobre o
           tratamento e a cura dessa doença...</p>
@@ -81,20 +80,28 @@
       </article>
       <article class="news-item">
         <h3>Surgimento de novo coronavírus em laboratório é improvável, diz médica</h3>
-        <img
-          src="https://img.r7.com/images/coronavirus-ilustracao-mostra-novo-virus-29012020214335295?dimensions=660x360"
-          alt="Covid-19 reprodução virus">
-        <p>Gisele Gosuen, consultora da Sociedade Brasileira de Infectologia, diz que não há base científica que
-          sustente teoria de Luc Montagnier, Nobel de Medicina.</p>
+
+        <p>Gisele Cristina Gosuen, consultora da SBI (Sociedade Brasileira de Infectologia), acha "pouco provável" que o
+          coronavírus SARS-CoV-2, causador da covid-19, tenha sido criado em um laboratório de Wuhan, na China. A
+          informação ganhou destaque nesta sexta-feira (17), após o francês Luc Montagnier, vencedor do Nobel de
+          Medicina de 2008, afirmar que cientistas chineses teriam "deixado escapar a nova cepa do vírus."</p>
+        <br>
+        <p>
+          Para a médica, que também atua na Escola Paulista de Medicina da Unifesp (Universidade Federal de São Paulo),
+          não há embasamento científico que sustente a acusação em meio à crise de saúde provocada pelo novo
+          coronavírus, que já infectou mais de 2 milhões de pessoas no mundo todo.
+
+          "Essa informação já tinha sido especulada anteriormente, mas não ganhou força. Eu acho muito pouco provável
+          que isso tenha acontecido. Não enxergo nenhum argumento racional que isso tenha realmente acontecido. Até
+          mesmo a forma como ele declarou é estranha", disse.
+        </p>
         <a
           href="https://noticias.r7.com/saude/surgimento-de-novo-coronavirus-em-laboratorio-e-improvavel-diz-medica-17042020">Leia
           mais</a>
       </article>
       <article class="news-item">
         <h3>Mais de 50% dos doentes no Brasil se recuperaram da Covid-19, contabiliza Ministério da Saúde</h3>
-        <img
-          src="https://ogimg.infoglobo.com.br/in/24377552-52f-c76/FT1086A/652/x87845823_Brazilian-army-officers-and-members-of-the-Biological-Radiological-and-Nuclear-Chemical.jpg.pagespeed.ic.QyN0mlGTX5.jpg"
-          alt="Paciente Covid-19">
+
         <p>Desde que os primeiros casos de covid-19 —a doença causada pelo novo coronavírus - foram registrados no final
           de fevereiro deste ano e começaram a aumentar rapidamente em março, as pessoas têm se perguntando sobre o
           tratamento e a cura dessa doença...</p>
@@ -109,12 +116,24 @@
       </article>
       <article class="news-item">
         <h3>Ciência tenta responder ao maior enigma sobre o coronavírus: a imunidade</h3>
-        <img
-          src="https://imagens.brasil.elpais.com/resizer/fvwPFUmBpuGe8MZ6v6bADjourWk=/1500x0/arc-anglerfish-eu-central-1-prod-prisa.s3.amazonaws.com/public/KUC2MGX7IBDEDKIHJCRFB3XULU.jpg"
-          alt="Médico e Paciente Covid-19">
+
         <p>Pesquisadores querem descobrir quanto tempo dura a proteção contra o vírus depois de uma infecção e se ela
           pode ser reativada.</p>
-        <a href="">Leia mais</a>
+        <br>
+        <p>
+          Nesta semana, um dos países que melhor está contendo a pandemia do coronavírus forneceu um dado preocupante. O
+          Centro de Controle de Doenças da Coreia do Sul informou que até 116 pacientes que eram considerados curados
+          voltaram a dar positivo alguns dias depois. O país está analisando esses casos e não deu mais dados.
+        </p>
+        <br>
+        <p>
+          Algo relacionado com isso está acontecendo em hospitais espanhóis, onde um bom número de pacientes apresenta
+          resultados negativos no principal teste de diagnóstico, o PCR, embora já tenham sinais da doença, segundo
+          dados da Sociedade Espanhola de Imunologia coletados em vários centros hospitalares.
+        </p>
+        <a
+          href="https://brasil.elpais.com/ciencia/2020-04-17/ciencia-tenta-responder-ao-maior-enigma-sobre-o-coronavirus-a-imunidade.html">Leia
+          mais</a>
       </article>
     </section>
   </main>
